# morning_greetings

./: README.md  pyproject.toml  setup.py
morning_greetings/: __init__.py  contact.py  contact_manager.py  logger.py  main.py
pythonProject/: .gitignore  main.py
pythonProject/countdown-to-deadline/: countdown-to-deadline.py
pythonProject/morning_greetings/: contact.py  contact_manager.py  contacts.csv  logger.py  main.py  message_generator.py  message_sender.py
tests/: test_application.py
