[tool.poetry]
name = "assignment2"
version = "0.1.0"
description = "ACIT4420-1 24H Assignment II: Files I/O, modules and packages"
authors = ["Ruby Jane Cabagnot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
schedule = "^1.2.2"
logging = "^0.4.9.6"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
