[tool.poetry]
name = "morning_greetings"
version = "0.1.0"
description = "A package for generating and sending morning greetings"
authors = ["Ruby Jane Cabagnot <rucab3109@oslomet.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-dotenv = "*"
schedule = "*"
pytz = "*"
fastapi = "^0.115.2"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
morning_greetings = "morning_greetings.main:main"
